idea/testData/multiModuleLineMarker/fromExpectedSecondaryConstructor/common/common.kt
expect class <!LINE_MARKER("descr='Has actuals in JVM'")!>SecondaryConstructor<!>{
    <!LINE_MARKER("descr='Has actuals in JVM'")!>constructor<!>(name: String, surname: String)
}
